--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ img {
   max-width: 100%;
   height: auto; }
 
+.preview-image {
+  width: 370px !important;
+  height: 264px !important;
+}
 h1 {
   font-family: 'Pacifico', cursive;
   font-size: 160px;
