--- a/css/style.css
+++ b/css/style.css
@@ -874,7 +874,7 @@ header {
     z-index: 10; }
     @media (max-width: 1799px) and (min-width: 1200px) {
       header .brand_container .brand {
-        margin-top: 110px; } }
+        /*margin-top: 110px;*/ } }
     @media (min-width: 1800px) {
       header .brand_container .brand {
         margin-top: 160px; } }
